--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bambu Lab</title>
-<style>div{
+<style>
+    div{
         background-color: #f9f9f9;
     max-width: 900px;
     border-radius: 10px;
